--- a/eudevfin/dim/.settings/org.eclipse.wst.common.component
+++ b/eudevfin/dim/.settings/org.eclipse.wst.common.component
@@ -5,10 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="core-0.0.1.CI-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/eudevfin-core/eudevfin-core">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="persistence-0.0.1.CI-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/eudevfin-persistence/eudevfin-persistence">
+        <dependent-module archiveName="common-financial-0.0.1.CI-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/eudevfin-common-financial/eudevfin-common-financial">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/WEB-INF/classes"/>
