dim: integrated select2, fixed bootstrap integration      new core components: checkbox, date, dropdown, multi select

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/DateInputField.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/DateInputField.html
@@ -12,10 +12,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
-<wicket:panel>
-    <div wicket:id="control-group">
-        <input wicket:id="field" type="text"/>
-    </div>
-</wicket:panel>
+<wicket:extend>
+    <input wicket:id="field" type="text"/>
+</wicket:extend>
 </body>
 </html>
