--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/TextInputField.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/TextInputField.html
@@ -12,8 +12,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
-    <wicket:extend>
-        <input wicket:id="field" type="password"/>
-    </wicket:extend>
+<wicket:extend>
+    <input wicket:id="field" type="text"/>
+</wicket:extend>
 </body>
 </html>
