--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/AbstractField.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/AbstractField.html
@@ -12,8 +12,14 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
-    <wicket:extend>
-        <input wicket:id="field" type="password"/>
-    </wicket:extend>
+<wicket:panel>
+    <div wicket:id="control-group">
+        <div wicket:id="xPenderController">
+            <span class="add-on" wicket:id="prepender"/>
+            <wicket:child/>
+            <span class="add-on" wicket:id="appender"/>
+        </div>
+    </div>
+</wicket:panel>
 </body>
 </html>
