--- a/eudevfin/dim/.settings/org.eclipse.wst.common.component
+++ b/eudevfin/dim/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,6 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <dependent-module archiveName="auth-0.0.1.CI-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/eudevfin-auth/eudevfin-auth">
             <dependency-type>uses</dependency-type>
@@ -18,6 +17,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/WEB-INF/classes"/>
-        <property name="context-root" value="eudevfin-dim"/>
+        <property name="context-root" value="dim"/>
     </wb-module>
 </project-modules>
