dim: added new sections

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/application.css
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/application.css
@@ -10,7 +10,7 @@
  */
 
 /*fix selectors in themes*/
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+select, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     height: 30px;
     /* fix date field margin bottom of 9px*/
     margin-bottom:5px;
