--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/tabs/BootstrapJSTabbedPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/components/tabs/BootstrapJSTabbedPanel.html
@@ -5,9 +5,6 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
-  ~
-  ~ Contributors:
-  ~    aartimon
   -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
@@ -18,7 +15,9 @@
             <li wicket:id="tabNames"><a wicket:id="tabNamesLink" href="#tab1" data-toggle="tab">Section 1</a></li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" wicket:id="tabContent"><div wicket:id="tabContentPanel"/></div>
+            <div class="tab-pane" wicket:id="tabContent">
+                <div wicket:id="tabContentPanel"/>
+            </div>
         </div>
     </div>
 </wicket:panel>
