--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.properties.xml
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.properties.xml
@@ -9,6 +9,11 @@
 
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-    <entry key="input.label">Input Field</entry>
+    <entry key="filters">Filters</entry>
+    <entry key="dashboards.table">Table Dashboard</entry>
+    <entry key="dashboards.pieChart">Pie Chart</entry>
+    <entry key="dashboards.columnChart">Column Chart</entry>
+    <entry key="dashboards.stackedBarChart">Stacked Bar Chart</entry>
+
 
 </properties>
