--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.properties.xml
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.properties.xml
@@ -9,8 +9,9 @@
 
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-    <entry key="filters">Filters</entry>
+    <entry key="sectorFilter">Filters</entry>
     <entry key="dashboards.table">Table Dashboard</entry>
+    <entry key="dashboards.financialTransaction">Financial Transaction</entry>
     <entry key="dashboards.pieChart">Pie Chart</entry>
     <entry key="dashboards.columnChart">Column Chart</entry>
     <entry key="dashboards.stackedBarChart">Stacked Bar Chart</entry>
