Adding a search box to the home page + other refactoring and data structure changes

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/AllLastTransactionPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/AllLastTransactionPanel.html
@@ -42,7 +42,7 @@
 			</tr>
 		</table>
     </div>
-	<div wicket:id="sorting-panel">
+	<div wicket:id="paging-panel">
 	</div>
 </wicket:panel>
 </body>
